crates/amalgam-parser/tests/snapshots/comprehensive_nickel_test__safe_type_operations.snap
---
source: crates/amalgam-parser/tests/comprehensive_nickel_test.rs
expression: snapshot_content
---
SUCCESS: false

OUTPUT:
STDERR:
error: non mergeable terms
   ┌─ /Users/jtoft/src/ai/amalgam/examples/pkgs/k8s_io/resource/Quantity.ncl:39:1
   │
39 │ String
   │ ^^^^^^ cannot merge this expression
   │
   ┌─ /Users/jtoft/src/ai/amalgam/test_comprehensive_temp_16633_2.ncl:21:31
   │
21 │       k8s.resource.Quantity & "1Gi"
   │       ------------------------^^^^^
   │       │                       │
   │       │                       with this expression
   │       originally merged here
   │
   = Merge operands have the same merge priority but they can't be combined.
   = One value is of type String while the other is of type Type
   = Values of different types can't be merged


STDOUT:
